# Vision-Based-Object-Detection-and-Sorting

./: .gitignore  .gitmodules  README.md
comparison/: COMPARISON_REPORT.md  FINAL_PROJECT_REPORT.md  ROBUSTNESS_REPORT_LOW_LIGHT.md  rtdetr_metrics.csv  run_benchmark.sh  yolo_metrics.csv
comparison/Comp_perfect_size_v3/ros2_ws/src/simpler_bringup/: CMakeLists.txt  package.xml
comparison/Comp_perfect_size_v3/ros2_ws/src/simpler_pick_place/: CMakeLists.txt
comparison/Comp_perfect_size_v3/ros2_ws/src/simpler_pick_place/scripts/: grasp_detector.py  initial_detach.py  pose_logger.py  vision_node.py
comparison/accuracy_test/: parse_accuracy.py  run_accuracy_trials.sh
comparison/robustness_test/: analyze_low_light_metrics.py  run_low_light_scene_only.sh
comparison/robustness_test/runs_low_light/: LOW_LIGHT_METRICS_SUMMARY.md  rtdetr_low_light_metrics.csv  yolo_low_light_metrics.csv
perfect/ros2_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
perfect/ros2_ws/log/: latest_build
perfect/ros2_ws/src/simpler_bringup/launch/: simpler_pick_place.launch.py
perfect/ros2_ws/src/simpler_description/urdf/: ur5e_robotiq.urdf.xacro
perfect/ros2_ws/src/simpler_pick_place/: CMakeLists.txt
perfect/ros2_ws/src/simpler_pick_place/scripts/: pick_place_demo.py
perfect_camera_test/: requirements.txt
perfect_camera_test/ros2_ws/src/simpler_bringup/launch/: scene.launch.py
perfect_camera_test/ros2_ws/src/simpler_description/: CMakeLists.txt
perfect_camera_test/ros2_ws/src/simpler_pick_place/: CMakeLists.txt
perfect_camera_test/ros2_ws/src/simpler_pick_place/scripts/: camera_test_node.py  pick_place_controller.py  pose_logger.py  scene_manager.py  vision_node.py
perfect_debug/perfect/ros2_ws/src/simpler_bringup/: CMakeLists.txt
perfect_debug/ros2_ws/src/simpler_bringup/: package.xml
perfect_debug/ros2_ws/src/simpler_bringup/config/: ur5e_robotiq_controllers.yaml
perfect_debug/ros2_ws/src/simpler_description/urdf/: robotiq_2f_85_patched.urdf.xacro
perfect_debug/ros2_ws/src/simpler_description/worlds/: pick_place.sdf
perfect_debug/ros2_ws/src/simpler_pick_place/: CMakeLists.txt  package.xml
perfect_debug/ros2_ws/src/simpler_pick_place/scripts/: pose_logger.py
perfect_size_v2/ros2_ws/src/simpler_bringup/rviz/: view_robot.rviz
perfect_size_v2/ros2_ws/src/simpler_description/urdf/: ur5e_robotiq.urdf.xacro
perfect_size_v2/ros2_ws/src/simpler_pick_place/: CMakeLists.txt  package.xml
perfect_v3/ros2_ws/src/simpler_pick_place/: CMakeLists.txt  package.xml
perfect_v3/ros2_ws/src/simpler_pick_place/scripts/: scene_manager.py
rt_detr/: train_rtdetr.py
rt_detr/runs/cube_detector_rtdetr/: args.yaml  results.csv
yolo/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
yolo/dataset/test/labels/: Snimek-obrazovky-2023-08-16-213333_png.rf.bb1b76326c68b92448da362c7b82a29f.txt  Snimek-obrazovky-2023-08-16-213812_png.rf.a59dc479c496412aac574ea07b2c9ac1.txt  Snimek-obrazovky-2023-08-16-213848_png.rf.d1010bd506da0fe841115ac5eb993de1.txt  Snimek-obrazovky-2023-08-16-213940_png.rf.36a5523f67b114dfb077e3c1e47419cd.txt  Snimek-obrazovky-2023-08-18-132057_png.rf.7f0822832044de1d6bff2cde122ac9f2.txt  Snimek-obrazovky-2023-08-18-132410_png.rf.f6297cae7a9f27b0c068f7c83e2e03e1.txt  Snimek-obrazovky-2023-08-18-132646_png.rf.64d287504346f5a259c80e323785f061.txt  Snimek-obrazovky-2023-08-18-132655_png.rf.0e6ebce8c592a97f36081c152dc8735b.txt  Snimek-obrazovky-2023-08-18-132821_png.rf.1c244dadbdcb70ffc3789e14324618ea.txt  Snimek-obrazovky-2023-08-18-132831_png.rf.74991bfaad58552b3ec0757795aa8643.txt  Snimek-obrazovky-2023-08-18-132934_png.rf.8649a57ea512a615f6824316511bb2a4.txt  Snimek-obrazovky-2023-08-18-133154_png.rf.93efb2d9a6d29403881c7e2f305793cd.txt  Snimek-obrazovky-2023-08-18-133201_png.rf.d8aefe286b0d387c9904a705e7eb13aa.txt  Snimek-obrazovky-2023-08-18-133208_png.rf.311d10f094b531746dfdaa2ca23051e2.txt  Snimek-obrazovky-2023-08-18-133633_png.rf.1e9f3bdb7c5c34c1fd89df64d7e9bc15.txt  Snimek-obrazovky-2023-08-18-133659_png.rf.e6dfb46c66133be2828f88ba36d235c7.txt  Snimek-obrazovky-2023-08-18-133710_png.rf.b0f657e352908eca643d4b48530edb1d.txt  Snimek-obrazovky-2023-08-18-133914_png.rf.f79dbd08fe802f237c3b0f6a465d4ed9.txt  Snimek-obrazovky-2023-08-18-133957_png.rf.3b50609dc231b7fd6ab6172e4d2216ea.txt
yolo/dataset/train/: labels.cache
yolo/dataset/valid/: labels.cache
yolo/runs/cube_detector/: args.yaml
yolo/runs/cube_detector2/: args.yaml  results.csv
(+111 files in other folders)
