<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simpler_bringup</name>
  <version>0.2.0</version>
  <description>Launch files for YOLO vision-based pick-and-place with UR5e + MoveIt 2</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>simpler_description</exec_depend>
  <exec_depend>simpler_pick_place</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
